AA-2004-10-27-1: Bugfix:    qmon returns an error dialog, when editing a calendar
                 Issue:     1267
                 Bugtraq:   6185169
                 Changed:   qmon
                 Review:    CR

AA-2004-10-27-0: Bugfix:    qmon job customize weird @{} field names
                            additional fields canot be added
                 Issue:     1307
                 Bugtraq:   6185136
                 Changed:   qmon
                 Review:    CR
                 
SG-2004-10-27-0: Bugfix:    qmod can modify queues starting with digits
                            now.
                 Issue:     1308
                 Bugtraq:   6184460
                 Changed:   qmod
                 Review:    EB

SG-2004-10-27-0: Bugfix:    - 3/3 part of of the look ahead scheduler
                            extention.
                 Issue:     978
                 Bugtraq:   6184466
                 Changed:   scheduler
                 Review:    EB

JG-2004-10-26-0: Testsuite: Additional charts for throughput test: Event 
                            delivery interval and number of events delivered.
                            Improved writing of testsuite data, e.g. dump files
                            from throughput test.
                            Fixed a bug in test performance/throughput.

CR-2004-10-22-1: Testsuite: moved commlib_throughput test to 
                            checktree/performance/commlib

CR-2004-10-22-0: Testsuite: - some fixes for new commlib_throughput test

SG-2004-10-22-0: Bugfix:    - fixed SG-2004-10-21-1
                 Changed:   scheduler
                 Review:    JG

AH-2004-10-22-0: Doc:       Checkpoint README refers to wrong script
                            queue_conf(5) incomplete for owner_list description
                 Issue:     1262, 601,
                 Changed:   README.cpr and README.cray
   
JG-2004-10-21-0: Testsuite: Fixed a number of tests, fixed typos and incorrect