@@ -1,3 +1,8 @@
+SG-2004-10-28-0: Bugfix:    -fixed profiling for the scheduler
+                            - fixed the inclusiv/exclusiv profiling of different layers
+                 Changed:   scheduler, profiling
+                 Review:    pending
+
 AA-2004-10-27-1: Bugfix:    qmon returns an error dialog, when editing a calendar
                  Issue:     1267
                  Bugtraq:   6185169
